# pl_elo_score

./: .gitignore  CLAUDE.md  Makefile  README.md  elo.py  elo_pl.ipynb  pyproject.toml
tests/: test_elo.py
